@@ -8,5 +8,6 @@ before_script:
  - npm install -g bower
  - bower install
  - npm install -g node-qunit-phantomjs
-script: node-qunit-phantomjs test/test.html --verbose
-
+script:
+ - node-qunit-phantomjs test/test.html --verbose
+ - node-qunit-phantomjs test/test_format_for_csv.html --verbose
