@@ -74,12 +74,15 @@ root/static/images/to_children.png
 root/static/images/waiting.gif
 root/static/images/save.png
 root/static/images/padlock.png
+root/static/scripts/format_for_csv.js
 root/static/scripts/main.js
 root/static/scripts/manual_qc.js
 root/static/scripts/manual_qc_ui.js
 root/static/stylesheets/npg_seqqc.css
 root/static/test/test.html
 root/static/test/test.js
+root/static/test/test_format_for_csv.html
+root/static/test/test_format_for_csv.js
 root/static/test/images/cross.png
 root/static/test/images/tick.png
 root/static/test/images/padlock.png
