@@ -1,0 +1,39 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Table format for export tests</title>
+    <link rel="stylesheet" type="text/css" href="../bower_components/qunit/qunit/qunit.css">
+    <script src="../bower_components/qunit/qunit/qunit.js"></script>
+    <script>QUnit.config.autostart = false;</script>
+  </head>
+  <body>
+    <div id="qunit"></div> 
+    <div id="qunit-fixture"></div>
+  </body>
+  
+  <div id='Test_NPG.QC.TableToCSV.formatTable'>
+  <table id="results_summary" summary="QC results summary">
+    <thead>
+      <tr>
+        <th rowspan='2'>Library<br>------<br>Sample<br>Name</th>
+        <th rowspan='2'>Run Id<br>------<br >Num.<br />Cycles</th>
+        <th>adapter</th>
+      </tr>
+      <tr>
+        <th class="check_labels">adapters,<br>%</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a>DN419445D:2:S1</a></td>
+        <td><a title="date completed 2015-11-04">18096</a><a title="date completed 2015-11-04">18096</a><br>310</div></td>
+        <td><a href="#18096:1">1</a></td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
+  
+  <script data-main="test_format_for_csv" src="../bower_components/requirejs/require.js"></script>
+</html>
+
