@@ -11,6 +11,8 @@ release 59.4
  - update_outcome method of mqc entities renamed to update_nonfinal_outcome
  - a new update_outcome method allows for update of final outcomes
  - method to toggle stored final manual qc outcomes
+ - SeqQC
+   - New functionality to allow export summary table to CSV
 
 release 59.3
  - transparent search query for autoqc objects irrespectively of the details of
